# ak_notes

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  coverage.json  helper.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test_on_push.yaml
src/: config.py  filesystem.py  info.py  login.py  main.py  resslogger.py  schemas.py  user_auth.py  utils.py  zzzzz_login.py
src/dao/: dao.py  dao_category.py  dao_file.py  dao_note.py  dao_tag.py  dao_test.py  dao_user.py
src/models/: category.py  file.py  models.py  note.py  tag.py  user.py
src/services/: auth.py  categories.py  category.py  category_logic.py  dao.py  files.py  files_logic.py  filesystem.py  notes.py  notes_logic.py  resslogger.py  tags.py  utils.py
src/services/users/: auth.py  crud.py
src/tests/: conftest.py  test_app.py  test_auth.py  test_categories.py  test_dao.py  test_files.py  test_notes.py  test_tags.py  test_user.py  test_users.py  testutils.py
src/views/: categories.py  dao_for_tests.py  files.py  info.py  notes.py  tags.py  users.py  users_auth.py  users_crud.py
testing_assets/: book.txt
