[tool.poetry]
name = "ak_notes"
version = "0.1.0"
description = ""
authors = ["Ress <mail@ress.ws>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
mongoengine = "^0.23.1"
dnspython = "^2.2.0"
bcrypt = "^3.2.0"
PyJWT = "^2.3.0"
requests = "^2.27.1"
fastapi-utils = "^0.2.1"
python-multipart = "^0.0.5"
filetype = "^1.0.10"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
coverage = "^6.3.1"
flake8 = "^4.0.1"
oitnb = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
